re-written in block format